Don't use specialised spacy dependency, enumerate dependencies #6
Co-authored-by: Daniel Meszaros <vasile.daniel.meszaros@gmail.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-spacy
+spacy=3.8.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
 benepar
 stanza
 pandas
