--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.53.0
+transformers==4.30.0
 spacy==3.7.0
 spacy_streamlit
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl#egg=en_core_web_sm==3.7.0
